Fixed tooltip appearing behind bookmarks

--- a/src/components/video/timeline.module.scss
+++ b/src/components/video/timeline.module.scss
@@ -11,6 +11,7 @@
     border-width: 1px;
 
     .tooltip {
+      z-index: 1;
       padding-bottom: 12px;
 
       .btn {
